--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -19,7 +19,7 @@
 
     <div class="navbar">
       <nav>
-        <a href="#">Services</a>
+        <a href="services.html">Services</a>
         <a href="*">Product</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
@@ -52,11 +52,11 @@
       <hr>
 
       <section class="section">
-        <div class="section1">
+        <div class="section-section">
           <h2>Features</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
-        <div class="section1">
+        <div class="section-section">
           <h2>About</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
@@ -70,12 +70,12 @@
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
 
-        <div class="section2">
+        <div class="section-section">
           <h2>Product</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
 
-        <div class="section2">
+        <div class="section-section">
           <h2>Vision</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
