--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -20,15 +20,16 @@
     <div class="navbar">
       <nav>
         <a href="services.html">Services</a>
-        <a href="*">Product</a>
+        <a href="#">Product</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
 
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-
+      <a href="index.html" >
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."/>
+      </a>
     </div>
 
     <header>
@@ -43,7 +44,7 @@
           <a class="button" href="#">Get Started</a>
         </div>
 
-        <img src="img/header-img.png" alt="Header Image">
+        <img id="home-header-img" src="img/header-img.png" alt="Header Image">
       </div>
     </header>
 
@@ -65,17 +66,17 @@
       <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
       <section class="section">
-        <div class="section2 margin-correcting">
+        <div class="section-section2">
           <h2>Services</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
 
-        <div class="section-section">
+        <div class="section-section2">
           <h2>Product</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
 
-        <div class="section-section">
+        <div class="section-section2">
           <h2>Vision</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
