--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -19,7 +19,7 @@
   <div class="navbar">
     <nav>
       <a href="services.html">Services</a>
-      <a href="*">Product</a>
+      <a href="#">Product</a>
       <a href="#">Vision</a>
       <a href="#">Features</a>
       <a href="#">About</a>
@@ -31,7 +31,7 @@
     </a>
   </div>
 
-  <div class="page">
+  <div class="page" id="services-page">
 <!-- ////////// HEADER SECTION \\\\\\\\\\ -->
     <header id="services-header">
       <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
@@ -102,8 +102,8 @@
 
     <hr>
 <!-- ////////// END SECTION \\\\\\\\\\ -->
-    <section class="section">
-      <div class="section-section">
+    <section class="section section-last">
+      <div class="section-section margin-correcting">
         <h2>Some Facts About Our Services</h2>
 
         <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
